--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,10 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    compile 'com.github.bumptech.glide:glide:4.0.0'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
+    compile 'com.android.support:design:27.0.2'
+    compile 'com.android.support:recyclerview-v7:25.0.2'
+    compile 'com.google.code.gson:gson:2.3'
     testCompile 'junit:junit:4.12'
     compile project(path: ':rtp')
 }
